--- a/static/images/projects/desktop.ini
+++ b/static/images/projects/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 Captura de pantalla 2026-01-27 193833.png=@Captura de pantalla 2026-01-27 193833,0
 Captura de pantalla 2026-01-27 193701.png=@Captura de pantalla 2026-01-27 193701,0
+Captura de pantalla 2026-01-30 162801.png=@Captura de pantalla 2026-01-30 162801,0
