commit road safety project page

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -372,7 +372,7 @@ params:
         content: "Developed a Python-based simulation to analyze how road friction and human reaction time affect collision speeds in highway and urban environments. The study provides data-driven insights into infrastructure investment by identifying critical safety thresholds for different pavement materials."
         image: /images/projects/seguridad_vial.png
         featured:
-          name: "Repo"
+          name: "Know more"
           link: "/projects/coche/"
         badges:
           - "Physics"
